--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+### *~~~~~~ Created by https://github.com ~~~~~~* ###
+
 # Xcode
 #
 build/
@@ -24,3 +26,28 @@ DerivedData
 # http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 #
 # Pods/
+
+
+### *~~~~~~ Created by https://www.gitignore.io ~~~~~~* ###
+
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
